# sdk-ogpu-py

./: .gitignore  CHANGELOG.md  LICENSE  NONCE_MANAGEMENT.md  README.md  docs-requirements.txt  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pr-validation.yml  release.yml
docs/: contributing.md  index.md
docs/about/: changelog.md  contributing.md
docs/advanced/: index.md  nonce-management.md
docs/api/: client.md  service.md
docs/assets/: custom.css
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: agents.md  custom-rpc.md  errors.md  events.md  ipfs.md  publishing.md  reading-state.md  recipes.md  responses.md  vault.md
docs/reference/: agent.md  chain.md  client.md  events.md  ipfs.md  protocol.md  service.md  types.md
docs/responses/: confirming-responses.md  index.md  retrieving-responses.md
docs/sources/: configuration.md  custom-sources.md  index.md
docs/tasks/: configuration.md  index.md  publishing-tasks.md
examples/: confirm_response.py  get_confirmed_response.py  get_responses.py  multiple_task.py  provider_lifecycle.py  publish_source.py  publish_task.py  set_agent.py  single_task.py  task_with_timeout.py  vault_operations.py  watch_task_lifecycle.py
examples/scenarios/: 01_client_happy_path.ipynb  02_task_cancellation.ipynb  03_source_update.ipynb  04_source_inactivation.ipynb  05_vault_lifecycle.ipynb  06_agent_setup.ipynb  07_agent_driven_flow.ipynb  README.md
ogpu/: __init__.py  _ipfs.py  ipfs.py
ogpu/agent/: __init__.py
ogpu/chain/: __init__.py  config.py  nonce.py  web3.py
ogpu/client/: __init__.py  chain_config.py  config.py  nonce_manager.py  nonce_utils.py  types.py  web3_manager.py
ogpu/events/: __init__.py  _async_web3.py  _filters.py  types.py  watchers.py
ogpu/ipfs/: __init__.py  fetch.py  publish.py
ogpu/protocol/: __init__.py  _base.py  _signer.py  controller.py  master.py  nexus.py  provider.py  response.py  source.py  task.py  terminal.py  vault.py
ogpu/service/: config.py
prds/: v0.2.1.md
tests/: conftest.py
(+40 files in other folders)
