[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogpu"
version = "0.2.1"
description = "OpenGPU SDK for distributed AI task deployment"
authors = [
    { name="Kutay", email="kutay@opengpu.network" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "colorama==0.4.6",
    "fastapi==0.115.12",
    "pydantic==2.11.4",
    "uvicorn==0.34.2",
    "sentry_sdk==2.29.1",
    "python-dotenv==1.1.0",
    "web3==7.12.0",
    "requests==2.32.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.6",
    "nbformat>=5.10",
]
examples = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ogpu*"]

[tool.setuptools.package-data]
ogpu = ["chain/abis/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ogpu"]
omit = [
    "ogpu/service/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["ogpu/service"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A"]
ignore = ["E501", "A001", "A004"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["ogpu/service/", "tests/", "build/"]

[[tool.mypy.overrides]]
module = ["ogpu.service.*"]
ignore_errors = true
